--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -44,7 +44,6 @@
           formaciones puedan utilizar las herramientas del deep learning en 
           sus respectivas actividades. Si no sabes Machine Learning 
           comienza primero con el <a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">Curso de Machine Learning</a></p>
-
         <h3>Contenido</h3>
         <ul>
             <li><span class="unit">Unidad 1: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb">De imagenes a vectores</a></li>
@@ -52,19 +51,16 @@
             <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb">Cajas negras preentrenadas</a>
               <ul>
                 <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb">Zero Shot Classification</a></li>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3.2_text_generation.ipynb">Text Generation (con LLMs)</a></li>
               </ul>
             </li>
             <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4_finetuning.ipynb">Finetuning</a></li>
-            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_obtener_vectores.ipynb">Como obtener solo los vectores</a></li>
-            <li><span class="unit">Unidad 6: </span>Un ejemplo de clasificacion de texto, desde BoW hasta un Ensemble de Transformers:
-                <ul>
-                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb">Baseline</a></li>
-                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb">Bag of Words</a></li>
-                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Zeroshot.ipynb">Transformers Zero Shot</a></li>
-                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb">Transformers Finetuning</a></li>
-                    <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb">Transformers Ensemble</a></li>
-                </ul>
+            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_obtener_vectores.ipynb">Como obtener solo los vectores</a>
+              <ul>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5.1_graficar_vectores_mas3D.ipynb">Como graficar estos vectores</a></li>
+              </ul>
             </li>
+            <li><span class="unit">Unidad 6: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/6_gradio.ipynb">Usando Gradio para crear una App</a></li>
         </ul>
 
         <hr class="separator">
@@ -94,12 +90,26 @@
                           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch.ipynb">CNN con Pytorch</a></li>
                           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning1.ipynb">CNN Finetuning con Pytorch</a></li>
                           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning2.ipynb">CNN Finetuning 2 con Pytorch</a></li>
+                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_SnaksDB_Pytorch_Finetuning_with_Transforms.ipynb">CNN Finetuning usando Transforms con Pytorch</a></li>
                       </ul>
                   </li>
                   <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E3_Autoencoders_Arch.ipynb">Autoencoders</a></li>
                   <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E4_Diffusers_Arch.ipynb">Diffusers</a></li>
                   <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb">Transformers</a></li>
               </ul>
+          </li>
+        </ul>
+
+        <h3>Participando en competencias de DeepLearning (material opcional avanzado):</h3>
+        <ul>
+          <li>Un ejemplo de clasificacion de texto, desde BoW hasta un Ensemble de Transformers:
+            <ul>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb">Baseline</a></li>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb">Bag of Words</a></li>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediciton_Zeroshot.ipynb">Transformers Zero Shot</a></li>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb">Transformers Finetuning</a></li>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb">Transformers Ensemble</a></li>
+            </ul>
           </li>
         </ul>
 
