--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -54,7 +54,11 @@
                 <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3.2_text_generation.ipynb">Text Generation (con LLMs)</a></li>
               </ul>
             </li>
-            <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4_finetuning.ipynb">Finetuning</a></li>
+            <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4_finetuning_autotrain.ipynb">Finetuning con AutoTrain</a>
+              <ul>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4.1_finetuning.ipynb">Finetuning Avanzado</a></li>
+              </ul>
+            </li>
             <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_obtener_vectores.ipynb">Como obtener solo los vectores</a>
               <ul>
                 <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5.1_graficar_vectores_mas3D.ipynb">Como graficar estos vectores</a></li>
@@ -97,19 +101,6 @@
                   <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E4_Diffusers_Arch.ipynb">Diffusers</a></li>
                   <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb">Transformers</a></li>
               </ul>
-          </li>
-        </ul>
-
-        <h3>Participando en competencias de DeepLearning (material opcional avanzado):</h3>
-        <ul>
-          <li>Un ejemplo de clasificacion de texto, desde BoW hasta un Ensemble de Transformers:
-            <ul>
-                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb">Baseline</a></li>
-                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb">Bag of Words</a></li>
-                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediciton_Zeroshot.ipynb">Transformers Zero Shot</a></li>
-                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb">Transformers Finetuning</a></li>
-                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb">Transformers Ensemble</a></li>
-            </ul>
           </li>
         </ul>
 
