--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -99,7 +99,11 @@
                   </li>
                   <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E3_Autoencoders_Arch.ipynb">Autoencoders</a></li>
                   <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E4_Diffusers_Arch.ipynb">Diffusers</a></li>
-                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb">Transformers</a></li>
+                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb">Transformers</a>
+                      <ul>
+                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/Transformer_Finetuning.ipynb">Transformer Finetuning con Pytorch</a></li>
+                      </ul>
+                  </li>
               </ul>
           </li>
         </ul>
