--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -66,7 +66,8 @@
             <li><span class="unit">Unidad 8: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/8_automl.ipynb">Automatizando el ML</a></li>
             <li><span class="unit">Unidad 9: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/9_resumen_metodologia_ml.ipynb">Resumen de la metodologia de ML</a> [ <a href="#" class="video-btn" data-video-id="7wFzgG9LQps"><span class="unit">Video </span><i class="fa-solid fa-video"></i></a> ]</li>
             <li><span class="unit">Unidad 10: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/10_interpretando_ml.ipynb">Entendiendo los resultados de una caja negra</a></li>
-            <li><span class="unit">Unidad 11: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/11_gradio.ipynb">Usando Gradio para crear una App</a></li>
+            <li><span class="unit">Unidad 11: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/11_pycaret.ipynb">Todo el Proceso de ML con PyCaret</a></li>
+            <li><span class="unit">Unidad 12: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/12_gradio.ipynb">Usando Gradio para crear una App</a></li>
         </ul>
 
         <hr class="separator">
