--- a/index.html
+++ b/index.html
@@ -55,53 +55,68 @@
   <section id="tours" class="courses container">
     <h2 class="decorated-title">Coding Tours</h2>
     <!-- Each Course Card -->
+
     <div class="course-card">
       <div class="course-info">
-            <div class="image-container">
-              <a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">
-                <img src="./assets/img/programacion.jpeg" alt="Programacion" class="image">
-                <div class="centered-text">PROGRAMACION</div>
-              </a>
-            </div>
-            <div class="text">
-                <p>Curso rapido de programacion en python. Desde cero.</p>
-                <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">IR AL CURSO</a></li></ul>
-            </div>
+        <div class="image-container">
+          <a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">
+            <img src="./assets/img/programacion.jpeg" alt="Programacion" class="image">
+            <div class="centered-text">PROGRAMACION PRINCIPIANTES</div>
+          </a>
+        </div>
+        <div class="text">
+            <p>Curso Basico de programacion en python para Principiantes.</p>
+            <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">IR AL CURSO</a></li></ul>
+        </div>
       </div>
     </div>
 
     <div class="course-card">
-        <div class="course-info">
-            
-            <div class="text">
-              <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar las 
-                herramientas de la ciencia de datos en sus respectivas actividades.</p>
-                <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">IR AL CURSO</a></li></ul>
-            </div>
-            <div class="image-container">
-              <a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">
-                <img src="./assets/img/cienciadedatos.webp" alt="Ciencia de Datos" class="image">
-                <div class="centered-text">CIENCIA DE DATOS</div>
-              </a>
-              </div>
+      <div class="course-info">
+        <div class="text">
+          <p>Curso rapido de programacion en python para Ciencia de Datos. Desde cero.</p>
+          <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">IR AL CURSO</a></li></ul>
+        </div>
+        <div class="image-container">
+          <a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">
+            <img src="./assets/img/programacion.jpeg" alt="Programacion" class="image">
+            <div class="centered-text">PROGRAMACION PARA CD</div>
+          </a>
         </div>
       </div>
+    </div>
 
-      <div class="course-card">
-        <div class="course-info">
-            <div class="image-container">
-              <a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">
-              <img src="./assets/img/ia.png" alt="Inteligencia Artificial" class="image">
-              <div class="centered-text">INTELIGENCIA ARTIFICIAL</div>
-            </a>
-            </div>
-            <div class="text">
-              <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar las herramientas 
-                de deep learning en sus respectivas actividades.</p>
-                <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">IR AL CURSO</a></li></ul>
-            </div>
+    <div class="course-card">
+      <div class="course-info">
+        <div class="image-container">
+          <a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">
+            <img src="./assets/img/cienciadedatos.webp" alt="Ciencia de Datos" class="image">
+            <div class="centered-text">CIENCIA DE DATOS</div>
+          </a>
+        </div>
+        <div class="text">
+          <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar las 
+            herramientas de la ciencia de datos en sus respectivas actividades.</p>
+            <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">IR AL CURSO</a></li></ul>
         </div>
       </div>
+    </div>
+
+    <div class="course-card">
+      <div class="course-info">
+        <div class="text">
+          <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar las herramientas 
+            de deep learning en sus respectivas actividades.</p>
+            <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">IR AL CURSO</a></li></ul>
+        </div>
+        <div class="image-container">
+          <a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">
+            <img src="./assets/img/ia.png" alt="Inteligencia Artificial" class="image">
+            <div class="centered-text">INTELIGENCIA ARTIFICIAL</div>
+          </a>
+        </div>
+      </div>
+    </div>
   </section>
 
   <hr class="separator">
