--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -40,7 +40,7 @@
   <section id="classes" class="classes container">
     <div class="classes-info">
         <h1>Programacion Coding Tour</h1>
-        <p class="classes-intro">Curso rapido de programacion en python. Desde cero.</p>
+        <p class="classes-intro">Curso rapido de programacion para Ciencia de Datos en python. Desde cero.</p>
 
         <h3>Contenido</h3>
         <ul>
