--- a/cursos/espanol/programacion_basico/programacion.html
+++ b/cursos/espanol/programacion_basico/programacion.html
@@ -45,6 +45,8 @@
         <h3>Contenido</h3>
         <ul>
           <li><span class="unit">Unidad 0: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion_basico/0_intro.ipynb">El ordenador es muy tonto</a></li>
+          <li><span class="unit">Unidad 0: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion_basico/1_variables.ipynb">La Tortuga tiene Memoria y sabe Matematicas</a></li>
+          <li><span class="unit">Unidad 0: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion_basico/2_patrones_repetidos.ipynb">Encontrando Patrones que se Repiten</a></li>
         </ul>
 
     </div>
