--- a/cursos/espanol/programacion_basico/programacion.html
+++ b/cursos/espanol/programacion_basico/programacion.html
@@ -14,6 +14,54 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Raleway:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../../assets/css/styles.css">
+    <style>
+      /* Form Container & Layout */
+form {
+  display: flex;
+  flex-direction: column;
+  width: 88%;
+  max-width: 800px; /* Adjust max-width for larger forms on desktop */
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-family: 'League Spartan', sans-serif;
+}
+
+/* Labels & Inputs */
+label {
+  display: block;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+
+input,
+textarea {
+  width: 95%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  margin-top:10px;
+}
+
+textarea {
+  min-height: 100px;
+}
+
+/* Button */
+button[type="submit"] {
+  background-color: #333D51;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button[type="submit"]:hover {
+  background-color: #333D51;
+}
+    </style>
     <title>Curso Basico de Programacion para Principiantes de FreeCodingTour.com</title>
 </head>
 <body>
