--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="image-container">
           <a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">
             <img src="./assets/img/programacion.jpeg" alt="Programacion" class="image">
-            <div class="centered-text">PROGRAMACION PARA CD</div>
+            <div class="centered-text">PROGRAMACION PARA CIENCIA DE DATOS</div>
           </a>
         </div>
       </div>
