--- a/cursos/espanol/programacion_basico/programacion.html
+++ b/cursos/espanol/programacion_basico/programacion.html
@@ -97,23 +97,25 @@ button[type="submit"]:hover {
           <li><span class="unit">Unidad 2: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion_basico/2_patrones_repetidos.ipynb">Encontrando Patrones que se Repiten</a></li>
           <li><span class="unit">Salon del Arte: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb">Los mejores dibujos de los alumnos</a></li>
         </ul>
-
-        <form action="https://formspree.io/f/xdoqzedy" method="POST">
-          <h3>Envia tu dibujo para el Salon del Arte</h3>
-            <label>
-              Tu Nombre:
-              <input type="text" name="firstname" required>
-            </label>
-            <label>
-              El codigo de tu dibujo:
-              <textarea name="message" required></textarea>
-            </label>
-            <!-- your other form fields go here -->
-            <button type="submit">Enviar</button>
-          </form>
-        </section>
-
     </div>
+  </section>
+
+  <hr class="separator">
+
+  <section>
+    <form action="https://formspree.io/f/xdoqzedy" method="POST">
+      <h3>Envia tu dibujo para el Salon del Arte</h3>
+        <label>
+          Tu Nombre:
+          <input type="text" name="firstname" required>
+        </label>
+        <label>
+          El codigo de tu dibujo:
+          <textarea name="message" required></textarea>
+        </label>
+        <!-- your other form fields go here -->
+        <button type="submit">Enviar</button>
+      </form>
   </section>
 
   <!-- Footer Section -->
