--- a/cursos/espanol/programacion_basico/programacion.html
+++ b/cursos/espanol/programacion_basico/programacion.html
@@ -103,19 +103,21 @@ button[type="submit"]:hover {
   <hr class="separator">
 
   <section>
-    <form action="https://formspree.io/f/xdoqzedy" method="POST">
-      <h3>Envia tu dibujo para el Salon del Arte</h3>
-        <label>
-          Tu Nombre:
-          <input type="text" name="firstname" required>
-        </label>
-        <label>
-          El codigo de tu dibujo:
-          <textarea name="message" required></textarea>
-        </label>
-        <!-- your other form fields go here -->
-        <button type="submit">Enviar</button>
-      </form>
+    <div class="classes-info">
+      <form action="https://formspree.io/f/xdoqzedy" method="POST">
+        <h3>Envia tu dibujo para el Salon del Arte</h3>
+          <label>
+            Tu Nombre:
+            <input type="text" name="firstname" required>
+          </label>
+          <label>
+            El codigo de tu dibujo:
+            <textarea name="message" required></textarea>
+          </label>
+          <!-- your other form fields go here -->
+          <button type="submit">Enviar</button>
+        </form>
+      </div>
   </section>
 
   <!-- Footer Section -->
