--- a/cursos/espanol/programacion_basico/programacion.html
+++ b/cursos/espanol/programacion_basico/programacion.html
@@ -102,7 +102,7 @@ button[type="submit"]:hover {
 
   <hr class="separator">
 
-  <section>
+  <section class="classes container">
     <div class="classes-info">
       <form action="https://formspree.io/f/xdoqzedy" method="POST">
         <h3>Envia tu dibujo para el Salon del Arte</h3>
