--- a/cursos/espanol/programacion_basico/programacion.html
+++ b/cursos/espanol/programacion_basico/programacion.html
@@ -95,6 +95,7 @@ button[type="submit"]:hover {
           <li><span class="unit">Unidad 0: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion_basico/0_intro.ipynb">El ordenador es muy tonto</a></li>
           <li><span class="unit">Unidad 1: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion_basico/1_variables.ipynb">La Tortuga tiene Memoria y sabe Matematicas</a></li>
           <li><span class="unit">Unidad 2: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion_basico/2_patrones_repetidos.ipynb">Encontrando Patrones que se Repiten</a></li>
+          <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion_basico/3_mas_instrucciones.ipynb">Mas Instrucciones</a></li>
           <li><span class="unit">Salon del Arte: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb">Los mejores dibujos de los alumnos</a></li>
         </ul>
     </div>
