--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <ul>
           <li><a href="https://www.freecodingtour.com/index.html#tours">Coding Tours</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
-          <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
         </ul>
       </nav>
@@ -139,24 +138,6 @@
 
   <hr class="separator">
 
-  <!-- Classes Section -->
-  <section id="classes" class="classes container">
-    <div class="classes-info">
-        <h2 >Clases Presenciales</h2>
-        <p class="classes-intro">Actualmente me encuentro dando clases en los siguientes institutos educativos:</p>
-
-        <p>
-            <ul>
-                <li>
-                    <a target="_blank" href="https://bit.ly/48DSnFM">IMMUNE</a>
-                  </li>
-            </ul>
-        </p>
-    </div>
-  </section>
-
-  <hr class="separator">
-
   <!-- About Section -->
   <section id="about" class="about container">
     <div class="about-info">
@@ -197,7 +178,8 @@
       <div class="sitemap-section">
         <h3>Cursos</h3>
         <ul>
-          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Programacion</a></li>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">Programacion Principiantes</a></li>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Programacion Ciencia de Datos</a></li>
           <li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">Ciencia de Datos</a></li>
           <li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">Inteligencia Artificial</a></li>
         </ul>
@@ -206,7 +188,6 @@
         <h3>Secciones</h3>
         <ul>
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
-          <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
           <li><a href="https://www.freecodingtour.com/links.html">Redes Sociales</a></li>
           <li><a href="https://www.freecodingtour.com/faq/">Preguntas Frecuentes</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
