--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -29,7 +29,6 @@
         <ul>
           <li><a href="https://www.freecodingtour.com/index.html#tours">Coding Tours</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
-          <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
         </ul>
       </nav>
@@ -111,7 +110,8 @@
       <div class="sitemap-section">
         <h3>Cursos</h3>
         <ul>
-          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Programacion</a></li>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">Programacion Principiantes</a></li>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Programacion Ciencia de Datos</a></li>
           <li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">Ciencia de Datos</a></li>
           <li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">Inteligencia Artificial</a></li>
         </ul>
@@ -120,7 +120,6 @@
         <h3>Secciones</h3>
         <ul>
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
-          <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
           <li><a href="https://www.freecodingtour.com/links.html">Redes Sociales</a></li>
           <li><a href="https://www.freecodingtour.com/faq/">Preguntas Frecuentes</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
