--- a/cursos/espanol/programacion_basico/programacion.html
+++ b/cursos/espanol/programacion_basico/programacion.html
@@ -77,7 +77,6 @@ button[type="submit"]:hover {
         <ul>
           <li><a href="https://www.freecodingtour.com/index.html#tours">Coding Tours</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
-          <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
         </ul>
       </nav>
@@ -127,7 +126,8 @@ button[type="submit"]:hover {
       <div class="sitemap-section">
         <h3>Cursos</h3>
         <ul>
-          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Programacion</a></li>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">Programacion Principiantes</a></li>
+          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Programacion Ciencia de Datos</a></li>
           <li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">Ciencia de Datos</a></li>
           <li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">Inteligencia Artificial</a></li>
         </ul>
@@ -136,7 +136,6 @@ button[type="submit"]:hover {
         <h3>Secciones</h3>
         <ul>
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
-          <li><a href="https://www.freecodingtour.com/index.html#classes">Clases Presenciales</a></li>
           <li><a href="https://www.freecodingtour.com/links.html">Redes Sociales</a></li>
           <li><a href="https://www.freecodingtour.com/faq/">Preguntas Frecuentes</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
