Intro video added

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
         <li>Accesible para personas que no tienen 
         conocimientos previos de computacion ni matematicas.</li>
     </ul>
+    
+  </section>
+
+  <section class="courses container">
+    <div style="text-align: center;">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Y51wkBWK4tA?si=LRpUBnCJad9Bp_0d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
   </section>
 
   <hr class="separator">
