--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   </section>
 
   <section class="courses container">
-    <div style="text-align: center;">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/Y51wkBWK4tA?si=LRpUBnCJad9Bp_0d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div style="text-align:center;">
+      <iframe style="width:90%;" height="400" src="https://www.youtube.com/embed/Y51wkBWK4tA?si=LRpUBnCJad9Bp_0d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </section>
 
